Updates for ElasticSearch QueryUtils approach and metadata handler test.